src-ken&y/objects/Package_Class__c.object
<CustomObject>
    <customHelpPage>HelpPackageClasses</customHelpPage>
    <description>Package Class defines the UOM hierarchies.</description>
    <fields>
        <fullName>Default_Container_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Container Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Item__c.Container__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Package Classes</relationshipLabel>
        <relationshipName>Package_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Package Class description can be up to 255 characters.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fractional_Quantities_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fractional Quantities Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Indicates the current level of UOM Class</description>
        <inlineHelpText>Indicates the current level of UOM Class</inlineHelpText>
        <label>Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Package_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Next Level Package Class</description>
        <label>Parent Package Class</label>
        <referenceTo>Package_Class__c</referenceTo>
        <relationshipLabel>Package Classes</relationshipLabel>
        <relationshipName>Package_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Package Class</label>
    <nameField>
        <label>Package Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>